--- a/P0/S1.md
+++ b/P0/S1.md
@@ -6,9 +6,17 @@
 ###### Encabezado de nivel 6
 
 # Prueba de texto
-Prueba de texto texto
 
-Aprendiendo a hacer parrafos. 
+Este es un texto que está en 
+la misma línea, aunque en el 
+editor se escribe en líneas separadas
+
+Esto comienza en un párrafo nuevo
+porque se han puesto dos saltos de línea
+
+Y esto está en líneas sepadas  
+porque tras cada linea hay  
+dos espacios y un salto de línea 
 
 # Listas no ordenadas
 
