--- a/P0/S1.md
+++ b/P0/S1.md
@@ -5,7 +5,7 @@
 ##### Encabezado de nivel 5
 ###### Encabezado de nivel 6
 
-# Texto
+# Prueba de texto
 
 Este es un texto que está en 
 la misma línea, aunque en el 
@@ -18,7 +18,7 @@ Y esto está en líneas sepadas
 porque tras cada linea hay  
 dos espacios y un salto de línea 
 
-## Listas no ordenadas
+# Listas no ordenadas
 
 * Elemento 1
 * Otro elemento
@@ -27,7 +27,7 @@ dos espacios y un salto de línea
   * Anidado 2
     * Anidado 3   
 
-## Listas ordenadas
+# Listas ordenadas
 
 Estos son los puntos a seguir:
 
@@ -36,7 +36,7 @@ Estos son los puntos a seguir:
 3. Practicar más
 4. Y seguir practicando más y más
 
-## Resaltado de texto
+# Resaltado de texto
 
 Ejemplo de *texto en cursiva*  
 Ejemplo de **texto en negrita**
@@ -58,7 +58,7 @@ En wikipedia encontramos más información sobre [markdown](https://es.wikipedia
 
 ## Enlaces internos
 
-Aquí hay información sobre [Texto](#Texto) en markdwon
+Aquí hay información sobre [prueba texto](#Pruebadetexto) en markdwon
 
 # Imágenes
 
