--- a/P0/S1.md
+++ b/P0/S1.md
@@ -58,7 +58,7 @@ En wikipedia encontramos más información sobre [markdown](https://es.wikipedia
 
 ## Enlaces internos
 
-Aquí hay información sobre [prueba texto](#Prueba de texto) en markdwon
+Aquí hay información sobre [prueba texto](#Prueba_de_texto) en markdwon
 
 # Imágenes
 
