--- a/P0/S1.md
+++ b/P0/S1.md
@@ -5,7 +5,7 @@
 ##### Encabezado de nivel 5
 ###### Encabezado de nivel 6
 
-# Prueba de texto
+# Texto
 
 Este es un texto que está en 
 la misma línea, aunque en el 
@@ -58,7 +58,7 @@ En wikipedia encontramos más información sobre [markdown](https://es.wikipedia
 
 ## Enlaces internos
 
-Aquí hay información sobre [prueba texto](#Prueba_de_texto) en markdwon
+Aquí hay información sobre [prueba texto](#Texto) en markdwon
 
 # Imágenes
 
