--- a/P0/S1.md
+++ b/P0/S1.md
@@ -41,6 +41,8 @@ Estos son los puntos a seguir:
 Ejemplo de *texto en cursiva*  
 Ejemplo de **texto en negrita**
 
+# Codigo
+
 ```python
 # -- Ejemplo de código en python
 a = 2
