--- a/P0/S1.md
+++ b/P0/S1.md
@@ -5,7 +5,7 @@
 ##### Encabezado de nivel 5
 ###### Encabezado de nivel 6
 
-# Texto
+# Prueba de texto
 
 Este es un texto que está en 
 la misma línea, aunque en el 
@@ -60,7 +60,7 @@ En wikipedia encontramos más información sobre [markdown](https://es.wikipedia
 
 ## Enlaces internos
 
-Aquí hay información sobre [prueba texto](#Texto) en markdwon
+Aquí hay información sobre [prueba texto](#prueba-de-texto) en markdwon
 
 # Imágenes
 
